[Frontend] Fix date overflow

--- a/MasjidTracker/wwwroot/css/events.css
+++ b/MasjidTracker/wwwroot/css/events.css
@@ -270,7 +270,7 @@
   }
 
   .event-name {
-    font-size: 1.618rem; 
+    font-size: 1.5rem; 
     color: black;
     align-self: center; 
     text-align: center;
